--- a/examples/3_train_gail.ipynb
+++ b/examples/3_train_gail.ipynb
@@ -154,11 +154,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "bd378ce8f53beae712f05342da42c6a7612fc68b19bea03b52c7b1cdc8851b5f"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('venv': venv)",
+   "display_name": "Python 3.8.13 ('CI': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -172,9 +169,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "0487f83f56705ad3d696095e2f7d597e22792ab31497a7f3aaf6b8619320eabc"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
